# webcrawl

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  epics-and-stories.md  prd-webcrawl-mcp.md  pyproject.toml  webcrawl-mcp-overview.md
.github/: FUNDING.yml
src/webcrawl_mcp/: __init__.py  __main__.py  cache.py  crawler.py  firecrawl.py  rate_limiter.py  scraper.py  search.py  server.py
tests/: conftest.py  test_scraper.py
