[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcrawl-mcp"
version = "0.1.0"
description = "MCP server for web scraping and search"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webcrawl_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
